miner checkbox w/o margin correction; overlay z-index

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1080,7 +1080,7 @@ textarea {
 }
 .overlay {
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   top: 0;
   bottom: 0;
   left: 0;
